Name:                zip-conduit
Version:             0.1
Synopsis:            Creating, modifying, and extracting files from zip archives via conduits.
Description:         Creating, modifying, and extracting files from zip archives via conduits.
License:             BSD3
License-file:        LICENSE
Author:              Tim Cherganov
Maintainer:          cherganov@gmail.com
Category:            Codec, Conduit
Build-type:          Simple
Cabal-version:       >=1.10

Library
  Hs-source-dirs:    src

  Build-depends:
      base           >= 4.3 && < 5
    , bytestring     == 0.9.*
    , cereal         == 0.3.*
    , conduit        == 0.4.*
    , digest         == 0.0.*
    , directory      == 1.1.*
    , filepath       == 1.3.*
    , mtl
    , old-time       >= 1.0 && < 1.2
    , time           == 1.4.*
    , transformers
    , utf8-string    == 0.3.*
    , zlib-conduit   == 0.4.*

  Exposed-modules:
      Codec.Archive.Zip

  Other-modules:
      Codec.Archive.Zip.Internal
      Codec.Archive.Zip.Util

  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Default-language:  Haskell2010

Test-suite tests
  Type:              exitcode-stdio-1.0
  Hs-source-dirs:    tests
  Main-is:           Main.hs

  Build-depends:
      base           >= 4.3 && < 5
    , bytestring     == 0.9.*
    , conduit        == 0.4.*
    , directory      == 1.1.*
    , filepath       == 1.3.*
    , HUnit
    , hpc            == 0.5.*
    , QuickCheck
    , temporary      == 1.1.*
    , test-framework
    , test-framework-hunit
    , test-framework-quickcheck2
    , time           == 1.4.*
    , zip-conduit

  Ghc-options:       -Wall -fno-warn-unused-do-bind
  Default-language:  Haskell2010


Source-repository head
  type:     git
  location: https://github.com/tymmym/zip-conduit.git
